GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :
       
    - 1.22alpha8 :
    
        - The job billing code if present is now saved into the database,
          and exported to subprocesses as the PYKOTAJOBBILLING environment
          variable.
          
        - Ctrl+C now makes PyKota commands exit without a traceback.
        
        - Fixed an i18n problem with Python 2.1
        
    - 1.22alpha7 :
    
        - Fixed some problems with the retrieval of the history from LDAP.
        
    - 1.22alpha6 :
    
        - Early errors now produce meaningful error messages (finally !)
        
    - 1.22alpha5 :
       
        - SNMP and PJL improvements with regard to PowerSave / StandBy.
        
    - 1.22alpha4 :
    
        - Fixed charset problem under MacOSX.
        
        - Allows pkbanner to accept more info to display on its 
          command line.
          
    - 1.22alpha3 :
    
        - Fixes some case related problems with some LDAP backends.
        
        - Fixes some problem for printers which directly go from
          "idle" to "warmup" and never to "printing" before
          returning to "idle".
          
        - Some permissions settings may have prevented cupspykota
          from parsing cupsd.conf, this is now fixed.
          
    - 1.22alpha2 :
    
        - Introduction of the web enabled print quote generator.
        
        - Fixed a potential race condition when several backend
          wrappers were present in CUPS' backend directory.
          
        - Fixed dumpykota's output in CUPS' page_log format to better
          match CUPS format.
          
    - 1.22alpha1 :
    
        - Import into Subversion.
        
    - 1.21 :
    